--- a/app/globals.css
+++ b/app/globals.css
@@ -19,8 +19,13 @@
   }
 }
 
-body {
+/* body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+} */
+
+body {
+  background-color: #1b1b1b;
+  color: white;
 }
