--- a/app/globals.css
+++ b/app/globals.css
@@ -29,3 +29,24 @@ body {
   background-color: #1b1b1b;
   color: white;
 }
+
+/* Custom scrollbar */
+.custom-scrollbar {
+  scrollbar-width: thin; /* Firefox */
+  scrollbar-color: #353636 transparent; /* thumb and track */
+
+  /* WebKit (Chrome, Edge, Safari) */
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #262627; /* Tailwind gray-400 */
+  border-radius: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
